tests/ui/simd-abi-checks.stderr
error: ABI error: this function call uses a avx vector type, which is not enabled in the caller
  --> $DIR/simd-abi-checks.rs:41:11
   |
LL |         f(g());
   |           ^^^
   |
   = help: consider enabling it globally (-C target-feature=+avx) or locally (#[target_feature(enable="avx")])

error: ABI error: this function call uses a avx vector type, which is not enabled in the caller
  --> $DIR/simd-abi-checks.rs:41:9
   |
LL |         f(g());
   |         ^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+avx) or locally (#[target_feature(enable="avx")])

error: ABI error: this function call uses a avx vector type, which is not enabled in the caller
  --> $DIR/simd-abi-checks.rs:47:14
   |
LL |         favx(gavx());
   |              ^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+avx) or locally (#[target_feature(enable="avx")])

error: ABI error: this function call uses a avx vector type, which is not enabled in the caller
  --> $DIR/simd-abi-checks.rs:47:9
   |
LL |         favx(gavx());
   |         ^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+avx) or locally (#[target_feature(enable="avx")])

error: ABI error: this function definition uses a avx vector type, which is not enabled
  --> $DIR/simd-abi-checks.rs:15:1
   |
LL | unsafe extern "C" fn g() -> __m256 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+avx) or locally (#[target_feature(enable="avx")])

error: ABI error: this function definition uses a avx vector type, which is not enabled
  --> $DIR/simd-abi-checks.rs:10:1
   |
LL | unsafe extern "C" fn f(_: __m256) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+avx) or locally (#[target_feature(enable="avx")])

error: aborting due to 6 previous errors

